@@ -614,7 +614,7 @@ main(void)
         debconf_go(debconf);
         return 1;
     }
-    if ((part_count = get_all_partitions(parts, MAX_PARTS, false)) <= 0) {
+    if ((part_count = get_all_partitions(parts, MAX_PARTS, false, 0)) <= 0) {
         debconf_input(debconf, "critical", "partconf/no-partitions");
         debconf_go(debconf);
         return 1;
