@@ -11,6 +11,8 @@ partconf (1.08) UNRELEASED; urgency=low
       short version of --ignore-fstype.
     - Add find-partitions -c/--colons output mode, which is easier to parse
       from shell.
+    - Add find-partitions -f/--flag option to display only partitions with a
+      given parted flag set.
 
  -- Christian Perrier <bubulle@debian.org>  Sat, 19 Mar 2005 12:26:03 +0100
 
